--- a/templates/management.html
+++ b/templates/management.html
@@ -7,9 +7,7 @@
     <h3>图书后台管理</h3>
     <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/register/">注册账号</a></h2>
     <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/add_book/">录入书本</a></h2>
-    <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/batch_upload_book/">批量录入书本</a></h2>
-    <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/uploadUser/">批量导入用户</a></h2>
-    <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/delete_book/">删除书本</a></h2>
+    <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/add_users/">批量导入用户</a></h2>
     <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/home/">查询书本信息</a></h2>
     <h2><a style = "font-size:17px;margin-top: 10px;color: blue" href = "/logout">注销</a></h2>
    </body>
