--- a/templates/table.html
+++ b/templates/table.html
@@ -12,6 +12,6 @@
     </table>
 
 
-    <a style="line-height: 100px" href="/home/">点击，返回查询界面！</a>
+    <a style="line-height: 100px" href="/home/">点击，返回查询界面!</a>
 <html>
 <body>
