--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>register</title>
+	<meta charset="utf-8"> 
+	<title>register</title>
+	<link rel="stylesheet" href="/static/css/bootstrap.min.css">  
+	<script src="/static/js/jquery/jquery.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
 </head>
+<style>
+    p{color: red; line-height: 50px;}
+</style>
 <body>
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-4 column">
+            </div>
+            <div class="col-md-4 column">
+                {%if dic2 %}
+                    <div class= "{{ dic2.frame_type }}">
+                        <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+                    <h4>
+                        {%if dic2 %}{{ dic2.title }} {% endif %}
+                    </h4> <strong>{%if dic2 %}{{ dic2.title }} {% endif %}</strong>{%if dic2 %}{{ dic2.message }} {% endif %}<a href="#" class="alert-link"></a>
+                    </div>
+                {% endif %}
+                <div class="page-header">
+                    <h1>
+                        Register <small></small>
+                    </h1>
+                </div>
+                <form role="form" action="/register/" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                         <label for="username">Username</label><input type="text" class="form-control" name="username" /><p>{%if form.username.errors %}{{ form.username.errors.0 }} {% endif %}</p>
+                    </div>
+                    <div class="form-group">
+                         <label for="password">Password</label><input type="password" class="form-control" name="password" /><p>{%if form.password.errors %}{{ form.password.errors.0 }} {% endif %}</p>
+                    </div>
+					<div class="form-group">
+						<label for="password1">Re-password</label><input type="password" class="form-control" name="password1" /><p>{%if form.password1.errors %}{{ form.password1.errors.0 }} {% endif %}</p>
+				    </div>
+                    <button type="submit" class="btn btn-default btn-primary">register</button>
+                    <p> {%if error %}{{ error }} {% endif %}</p>
+                    <p> {%if clear_err %}{{ clear_err }} {% endif %}</p>
+                </form>
+                <a style="line-height: 50px;font-size: larger;margin-left: 100px;" href="/login/">Go sign up!</a>
+            </div>
+            <div class="col-md-4 column">
+            </div>
+        </div>
+    </div>
+</body> 
+</html>
 
-<form action="/register/" method="post" novalidate>
-    {% csrf_token %}
-    <dl>
-       <dt>用户名:</dt>
-           <p>{{ form.username1 }} {%if form.username1.errors %}{{ form.username1.errors.0 }} {% endif %}{{ error }}</p>
-       <dt>密码:</dt>
-          <p>{{ form.password1 }} {%if form.password1.errors %}{{ form.password1.errors.0 }} {% endif %}{%if clear_errors %}{{ clear_errors.0 }} {% endif %}</p>
-        <dt>再次输入密码:</dt>
-          <p>{{ form.password2 }} {%if form.password2.errors %}{{ form.password2.errors.0 }} {% endif %}{%if clear_errors %}{{ clear_errors.0 }} {% endif %}</p>
-    </dl>
-    <p><input  type = submit value ="注册"></p>
-</form>
-<a href="/login/">注册完了?去登录吧!</a>
-</body>
-</html> 
+
