--- a/templates/book.html
+++ b/templates/book.html
@@ -25,19 +25,19 @@
                     </div>
                     <ul class="nav navbar-nav">
 						<li>
-							 <a href="/management/user">User</a>
+							 <a href="/management/user/">User</a>
 						</li>
 						<li class="active">
-							 <a href="/management/book">Book</a>
+							 <a href="/management/book/">Book</a>
 						</li>
                         <li>
-                            <a href="/management/system">System</a>
+                            <a href="/management/system/">System</a>
                         </li>
                     </ul>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a style="margin-right: 100px;" href="/home">Go Back</a>
+                                <a style="margin-right: 100px;" href="/home/">Go Back</a>
                             </li>
                         </ul>
                     </div>
@@ -48,10 +48,10 @@
                 <div style="float: left;" class="container">
                     <div class="row clearfix">
                         <div style="padding-left:0" class="col-md-12 column">
-                            <div style="margin-right: 15px;" class="{{ dic1['style'] }}">
+                            <div style="margin-right: 15px;" class="{{ dic1.style }}">
                                 <h4>
-                                    {{ dic1['title'] }}
-                                </h4> <strong>{{ dic1['title'] }}</strong>{{ dic1['message'] }}
+                                    {{ dic1.title }}
+                                </h4> <strong>{{ dic1.title }}</strong>{{ dic1.message }}
                             </div>
                         </div>
                     </div>
@@ -68,8 +68,8 @@
                                 </h4>
                             </div>
                             <div class="modal-body">
-                                <form role="form" action="/management/book/addbook" method="post" enctype = "multipart/form-data">
-                                    {{ form.csrf_token }}
+                                <form role="form" action="/management/book/addbook/" method="post" enctype = "multipart/form-data">
+                                    {% csrf_token %}
                                     <div class="form-group">
                                         <label for="bookname">bookname</label><input type="text" class="form-control" name="bookname" />
                                     </div>
@@ -136,31 +136,30 @@
                     </thead>
                     <tbody>
                         {% for item in list1 %}
-                            <tr class="{{ item['style'] }}">
+                            <tr class="{{ item.style }}">
                                 <td>
-                                    {{ item['id'] }}
+                                    {{ item.id }}
                                 </td>
                                 <td>
-                                    {{ item['book_name'] }}
+                                    {{ item.book_name }}
                                 </td>
                                 <td>
-                                    {{ item['book_type'] }}
+                                    {{ item.book_type }}
                                 </td>
                                 <td>
-                                    {{ item['issue_year'] }} 
+                                    {{ item.issue_year }} 
                                 </td>
                                 <td>
-                                    {{ item['book_file_name'] }}
+                                    {{ item.book_file_name }}
                                 </td>
                                 <td>
-                                    {{ item['add_book_time'] }}
+                                    {{ item.add_book_time }}
                                 </td>
                                 <td>
-                                    {{ item['number_of_downloads'] }}
+                                    {{ item.number_of_downloads }}
                                 </td>
                                 <td>
-                                    {% set id=item['id'] %}
-                                    <a id="modal-207275" onclick="parameter_id('{{ id }}')" href="#modal-container-207275" role="button" style="font-size: x-small;" class="btn btn-default" data-toggle="modal">Update</a><a role="button" class="btn btn-default btn-primary" style="margin-left: 15px;font-size: x-small;" href="/management/book/delete?id={{ item['id'] }}">Delete</a>
+                                    <a id="modal-207275" onclick="parameter_id('{{ item.id }}')" href="#modal-container-207275" role="button" style="font-size: x-small;" class="btn btn-default" data-toggle="modal">Update</a><a role="button" class="btn btn-default btn-primary" style="margin-left: 15px;font-size: x-small;" href="/management/book/delete?id={{ item.id }}">Delete</a>
                                 </td>
                             </tr>  
                         {% endfor %}
@@ -174,17 +173,17 @@
                                         </h4>
                                     </div>
                                     <div class="modal-body">
-                                        <form role="form" action="/management/book/update" method="post">
-                                            {{ form.csrf_token }}
+                                        <form role="form" action="/management/book/update/" method="post">
+                                            {% csrf_token %}
                                             <div class="form-group">
                                                 <label for="id">id</label><input type="text" class="form-control" id="updateDeptId" name="id"  readonly="readonly" />
                                             </div>
                                             <div class="form-group">
-                                                <label for="bookname1">bookname</label><input type="text" class="form-control" name="bookname1" />
+                                                <label for="bookname">bookname</label><input type="text" class="form-control" name="bookname" />
                                             </div>
                                             <div class="form-group">
-                                                <label for="booktype1">booktype</label>
-                                                <select name="booktype1" class="form-control">
+                                                <label for="booktype">booktype</label>
+                                                <select name="booktype" class="form-control">
                                                     <option value="None">Please Select</option>
                                                     <option value="Python">Python</option>
                                                     <option value="C">C</option>
@@ -220,30 +219,30 @@
                     </div>
                     <div class="col-md-4 column">
                         <ul class="pagination">
-                            <li class="{{ dic1['active_Prev'] }}">
-                                {% if dic1['current_page_number'] <=2  %}
+                            <li class="{{ dic1.active_Prev }}">
+                                {% if dic1.current_page_number <= 2 %}
                                     <a href="/management/book/page?number=1">Prev</a>
                                 {% else %}
-                                    <a href="/management/book/page?number={{ dic1['current_page_number']-1 }}">Prev</a>
+                                    <a href="/management/book/page?number={{ dic1.current_page_number|add:-1 }}">Prev</a>
                                 {% endif %}
                                </li>
-                            <li class="{{ dic1['active1'] }}">
+                            <li class="{{ dic1.active1 }}">
                                  <a href="/management/book/page?number=1">1</a>
                             </li>
-                            <li class="{{ dic1['active2'] }}">
+                            <li class="{{ dic1.active2 }}">
                                  <a href="/management/book/page?number=2">2</a>
                             </li>
-                            <li class="{{ dic1['active3'] }}">
+                            <li class="{{ dic1.active3 }}">
                                  <a href="/management/book/page?number=3">3</a>
                             </li>
-                            <li class="{{ dic1['active4'] }}">
+                            <li class="{{ dic1.active4 }}">
                                  <a href="/management/book/page?number=4">4</a>
                             </li>
-                            <li class="{{ dic1['active5'] }}">
+                            <li class="{{ dic1.active5 }}">
                                  <a href="/management/book/page?number=5">5</a>
                             </li>
-                            <li class="{{ dic1['active_next'] }}">
-                                 <a href="/management/book/page?number={{ dic1['current_page_number']+1 }}">Next</a>
+                            <li class="{{ dic1.active_next }}">
+                                 <a href="/management/book/page?number={{ dic1.current_page_number|add:1 }}">Next</a>
                             </li>
                         </ul>
                     </div>
