--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -20,8 +20,8 @@ table{width:100%;height:100%;border:0;}
 <tr>  
 <td>  
 <h1>404</h1>  
-<h3>大事不妙啦!</h3>  
-<p>你访问的页面好像不小心被作者给弄丢了~<br/>
+<h3>错误!</h3>  
+<p>你访问的页面不存在~<br/>
 <a href="/">返回首页 ></a>
 </p>  
 </td>  
