--- a/templates/user.html
+++ b/templates/user.html
@@ -20,19 +20,19 @@
                     </div>
                     <ul class="nav navbar-nav">
 						<li class="active" >
-							 <a href="/management/user">User</a>
+							 <a href="/management/user/">User</a>
 						</li>
 						<li>
-							 <a href="/management/book">Book</a>
+							 <a href="/management/book/">Book</a>
 						</li>
                         <li>
-                            <a href="/management/system">System</a>
+                            <a href="/management/system/">System</a>
                         </li>
                     </ul>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a style="margin-right: 100px;" href="/home">Go Back</a>
+                                <a style="margin-right: 100px;" href="/home/">Go Back</a>
                             </li>
                         </ul>
                     </div>
@@ -43,11 +43,11 @@
                 <div style="float: left;" class="container">
                     <div class="row clearfix">
                         <div style="padding-left:0" class="col-md-12 column">
-                            <div style="margin-right: 15px;" class="{{ dic1['style'] }}">
+                            <div style="margin-right: 15px;" class="{{ dic1.style }}">
                                 
                                 <h4>
-                                    {{ dic1['title'] }}
-                                </h4> <strong>{{ dic1['title'] }}</strong>{{ dic1['message'] }}
+                                    {{ dic1.title }}
+                                </h4> <strong>{{ dic1.title }}</strong>{{ dic1.message }}
                             </div>
                         </div>
                     </div>
@@ -64,18 +64,18 @@
                                 </h4>
                             </div>
                             <div class="modal-body">
-                                <form role="form" action="/management/user/addusers" method="post" enctype = "multipart/form-data">
-                                    {{ form.csrf_token }}
+                                <form role="form" action="/management/user/addusers/" method="post" enctype = "multipart/form-data">
+                                    {% csrf_token %}
                                     <div class="form-group">
-                                            <label for="file">File input</label><input type="file" name="file" />
+                                            <label for="user_file">File input</label><input type="file" name="user_file" />
                                         <p class="help-block">
                                             The template download link is as follows:
-                                            <a href="/management/user/addusers/download">Click to download</a>
+                                            <a href="/management/user/addusers/download/">Click to download</a>
                                         </p>
                                     </div>
                                     <button type="submit" class="btn btn-default btn-primary">Submit</button>
                                 </form>
-                                <p>{%if form.file.errors%}{{ form.file.errors[0] }} {% endif %}</p>
+                                <p>{%if form.user_file.errors%}{{ form.user_file.errors.0 }} {% endif %}</p>
                             </div>
                         </div> 
                     </div>
@@ -91,6 +91,15 @@
                                 Username
                             </th>
                             <th>
+                                First Name
+                            </th>
+                            <th>
+                                Last Name
+                            </th>
+                            <th>
+                                Email
+                            </th>
+                            <th>
                                 Registration time
                             </th>
                             <th>
@@ -103,21 +112,30 @@
                     </thead>
                     <tbody>
                         {% for item in user_list %}
-                            <tr class="{{ item['style'] }}">
+                            <tr class="{{ item.style }}">
                                 <td>
-                                    {{ item['id'] }}
+                                    {{ item.id }}
                                 </td>
                                 <td>
-                                    {{ item['username'] }}
+                                    {{ item.username }}
                                 </td>
                                 <td>
-                                    {{ item['add_time'] }}
+                                    {{ item.first_name }}
                                 </td>
                                 <td>
-                                    {{ item['group'] }} <a style="margin-left: 20px;" href="/management/user/changegroup?username={{ item['username'] }}&group={{ item['group'] }}">change user group</a>
+                                    {{ item.last_name }}
                                 </td>
                                 <td>
-                                    <a role="button" class="btn btn-default btn-primary" style="font-size: smaller;" href="/management/user/delete?username={{ item['username'] }}">Delete</a>
+                                    {{ item.email }}
+                                </td>
+                                <td>
+                                    {{ item.date_joined }}
+                                </td>
+                                <td>
+                                    {{ item.group }} <a style="margin-left: 20px;" href="/management/user/changegroup?userid={{ item.id }}&group={{ item.group }}">change user group</a>
+                                </td>
+                                <td>
+                                    <a role="button" class="btn btn-default btn-primary" style="font-size: smaller;" href="/management/user/delete?userid={{ item.id }}">Delete</a>
                                 </td>
                             </tr>  
                         {% endfor %}
@@ -130,30 +148,30 @@
                     </div>
                     <div class="col-md-4 column">
                         <ul class="pagination">
-                            <li class="{{ dic1['active_Prev'] }}">
-                                {% if dic1['current_page_number'] <=2  %}
+                            <li class="{{ dic1.active_Prev }}">
+                                {% if dic1.current_page_number <= 2  %}
                                     <a href="/management/user/page?number=1">Prev</a>
                                 {% else %}
-                                    <a href="/management/user/page?number={{ dic1['current_page_number']-1 }}">Prev</a>
+                                    <a href="/management/user/page?number={{ dic1.current_page_number|add:-1 }}">Prev</a>
                                 {% endif %}
                                </li>
-                            <li class="{{ dic1['active1'] }}">
+                            <li class="{{ dic1.active1 }}">
                                  <a href="/management/user/page?number=1">1</a>
                             </li>
-                            <li class="{{ dic1['active2'] }}">
+                            <li class="{{ dic1.active2 }}">
                                  <a href="/management/user/page?number=2">2</a>
                             </li>
-                            <li class="{{ dic1['active3'] }}">
+                            <li class="{{ dic1.active3 }}">
                                  <a href="/management/user/page?number=3">3</a>
                             </li>
-                            <li class="{{ dic1['active4'] }}">
+                            <li class="{{ dic1.active4 }}">
                                  <a href="/management/user/page?number=4">4</a>
                             </li>
-                            <li class="{{ dic1['active5'] }}">
+                            <li class="{{ dic1.active5 }}">
                                  <a href="/management/user/page?number=5">5</a>
                             </li>
-                            <li class="{{ dic1['active_next'] }}">
-                                 <a href="/management/user/page?number={{ dic1['current_page_number']+1 }}">Next</a>
+                            <li class="{{ dic1.active_next }}">
+                                 <a href="/management/user/page?number={{ dic1.current_page_number|add:1 }}">Next</a>
                             </li>
                         </ul>
                     </div>
